--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <section>
+ <section class="top-banner">
   <div class="half-width">
     <h1>Welcome To</h1>
    <h1><span>Md.Mosarof Hossen</span> World!!!!</h1>
@@ -22,6 +22,6 @@
      <img src="images/img1.jpg" alt="">
    </div>
  </section>
- <h1>This is heading</h1>
+ 
 </body>
 </html>
