--- a/index.html
+++ b/index.html
@@ -22,6 +22,27 @@
      <img src="images/img1.jpg" alt="">
    </div>
  </section>
+
+
+
+ <section class="dream-big">
+  <div  class="half-width">
+    <img src="images/jhankar.png" alt="img">
+  </div>
+
+  <div class="half-width">
+    <h1>Dream Big</h1>
+    <h2>I Want to become a web-developer</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ex non deserunt, ratione accusantium labore, assumenda quasi quo ullam quae voluptatem aut dolore! Odit necessitatibus, expedita quae voluptas tempora ad eaque voluptatum maiores, harum voluptates magnam omnis beatae. Culpa aliquam laboriosam dolorem impedit animi doloremque illo laudantium dolore deleniti magni.</p>
+
+    <a class="button-link1" href="https://www.w3schools.com/">Download Resume</a>
+
+  </div>
+
+
+
+
+ </section>
  
 </body>
 </html>
