--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <section class="top-banner">
+ <section class="top-banner flexible-area">
   <div class="half-width">
     <h1>Welcome To</h1>
    <h1><span>Md.Mosarof Hossen</span> World!!!!</h1>
@@ -25,7 +25,7 @@
 
 
 
- <section class="dream-big">
+ <section class="dream-big flexible-area">
   <div  class="half-width">
     <img src="images/jhankar.png" alt="img">
   </div>
@@ -43,6 +43,31 @@
 
 
  </section>
+
+
+ <section class="experience-are">
+  <h1>Experiences</h1>
+  <div class="flexible-area">
+
+    <div id="ex-1" class="experience-item">
+      <h2>Full Stack Web Developer</h2>
+      <h2 class="author">2021-Present | Pro Level Developer</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet ex libero hic doloremque quo ducimus elaborum! Dolor suscipit totam molestias iure obcaecati enim nesciunt.</p>
+    </div>
+  
+    <div id="ex-2" class="experience-item">
+      <h2>Baby Web Developer</h2>
+      <h2 class="author">2020-2021 | Programing Hero Lerner</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet ex libero hic doloremque quo ducimus eum non labore, tempore recusandae ullam qui aliquid rerum blanditiis neqmolestias iure obcaecati enim nesciunt.</p>
+    </div>
+
+  </div>
+
+ </section>
+
+ <footer>
+  <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+ </footer>
  
 </body>
 </html>
